--- a/tutorialprogram/index.html
+++ b/tutorialprogram/index.html
@@ -14,6 +14,13 @@
 <br>
 <ol>
 	<a href="#"> Introdução </a>
+	<a href="#"> Seção2 </a>
+	<a href="#"> Seção3 </a>
+	<a href="#"> Seção4 </a>
+	<a href="#"> Seção5 </a>
+	<a href="#"> Seção6 </a>
+	<a href="#"> Seção7 </a>
+	<a href="#"> Seção8 </a>
 
 </ol>
 
