--- a/tutorialprogram/index.html
+++ b/tutorialprogram/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head><title> Introdução a Programação com Python</title>
-
+	<meta charset="utf-8"/>
 </head>
 
 <body>
@@ -13,14 +13,14 @@
 <h2> <b>  Indice </b> </h2>
 <br>
 <ol>
-	<a href="#"> Introdução </a>
-	<a href="#"> Seção2 </a>
-	<a href="#"> Seção3 </a>
-	<a href="#"> Seção4 </a>
-	<a href="#"> Seção5 </a>
-	<a href="#"> Seção6 </a>
-	<a href="#"> Seção7 </a>
-	<a href="#"> Seção8 </a>
+	<a href="#"> Introdução </a> <br>
+	<a href="#"> Seção2 </a> <br>
+	<a href="#"> Seção3 </a><br>
+	<a href="#"> Seção4 </a><br>
+	<a href="#"> Seção5 </a><br>
+	<a href="#"> Seção6 </a><br>
+	<a href="#"> Seção7 </a><br>
+	<a href="#"> Seção8 </a><br>
 
 </ol>
 
