--- a/tutorialprogram/index.html
+++ b/tutorialprogram/index.html
@@ -13,14 +13,14 @@
 <h2> <b>  Indice </b> </h2>
 <br>
 <ol>
-	<a href="#"> Introdução </a> <br>
-	<a href="#"> Seção2 </a> <br>
-	<a href="#"> Seção3 </a><br>
-	<a href="#"> Seção4 </a><br>
-	<a href="#"> Seção5 </a><br>
-	<a href="#"> Seção6 </a><br>
-	<a href="#"> Seção7 </a><br>
-	<a href="#"> Seção8 </a><br>
+	<li><a href="#">Introdução</a></li> <br>
+	<li><a href="#">Seção2</a></li> <br>
+	<li><a href="#">Seção3</a></li><br>
+	<li><a href="#">Seção4</a></li><br>
+	<li><a href="#">Seção5</a></li><br>
+	<li><a href="#">Seção6</a></li><br>
+	<li><a href="#">Seção7</a></li><br>
+	<li><a href="#">Seção8</a></li><br>
 
 </ol>
 
