--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><title> Introdução a Programação com Python</title>
+<head><title>Materiais Para Estudos</title>
 	<meta charset="utf-8"/>
 </head>
 
@@ -28,5 +28,6 @@
 
 <br>
 <a href="https://www.repl.it"> REPL.IT - Escrever códigos online</a>
+	<a href="http://www.gaenos.blogspot.com">GAENOS</a>
 </body>
 </html>
