--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2> <b>  Indice </b> </h2>
 <br>
 <ol>
-	<li><a href="#">Introdução</a></li> <br>
+	<li><a href="INTRO.md">Introdução</a></li> <br>
 	<li><a href="#">Seção2</a></li> <br>
 	<li><a href="#">Seção3</a></li><br>
 	<li><a href="#">Seção4</a></li><br>
