--- a/index.html
+++ b/index.html
@@ -1,35 +1,313 @@
-<!DOCTYPE html>
-<html>
+## mcestudos
+# Matemática & Computação e Tecnologias
+Guia para estudos em Matemática, Computação e Introdução Básica a Programação de Computadores com a Linguagem Python. E links relacionados a tecnologia e cultura GEEK/Hacker
 
-<head><title>Materiais Para Estudos</title>
-	<meta charset="utf-8"/>
-</head>
+1. Introdução
+2. Programação - Linguagens
+3. Criando Games
+4. Matemática
+5. Computação e Sistemas
 
-<body>
-<section style="">
-<p> Conteudos básicos sobre lógica de programação de computador.
+### 1. Introdução
+
+
+Requisitos básicos iniciais gerais em nivél médio (colegial/HighSchool), principalmente em Matemática e Fisica. Dependendo das áreas/projetos outros conhecimento mais avançados podem ser requeridos. Por exemplo, estudo de Inteligência Artifical e Robotica requerem basicamente conhecimentos em matemática avançada como Algebra Linear, Cálculo, Combinatoria, Probabilidade, Estatistica (tanto IA como Robotica) além de Fisica, Mecanica, Eletronica dependendo.
+ Para matemática é possível achar livros como da SBM (ensino médio), Fundamentos da Matemática além de links de páginas como do IMPA (Instituto de Matemática Pura e Aplicada  e OBMEP (Olimpiada Brasileira de Matemática das Escolas Públicas).
+
+ 
+* Latex/TEX (editoração cientifica) https://en.wikibooks.org/wiki/LaTeX 
+
+* Editor de texto Vim (livro sobre) https://woliveiras.com.br/vimparanoobs/index.html 
+
+* PET-CoCE é um Programa de Educação Tutorial (PET) da Universidade Tecnológica Federal do Paraná (UTFPR), Câmpus Curitiba http://www.dainf.ct.utfpr.edu.br/petcoce/ 
+
+* IMPA https://www.impa.br 
+
+* Matemática Básica OBMEP http://matematica.obmep.org.br/
+
+* www.wsricardo.github.io
+
+* Básico sobre Lógica de Programação e Python https://gaenos.wordpress.com/2014/11/15/basico-python/
+
+* Cursos Informática TI http://timtec.com.br/pt/
+
+* Python Para Zumbis (programação de computador nivel iniciante ao itermediario) https://www.youtube.com/playlist?list=PLUukMN0DTKCtbzhbYe2jdF4cr8MOWClXc
+
+* Criando Game com Python - https://www.youtube.com/watch?v=0YJq9_u4n5k&list=PLxNM4ef1BpxivJHPrgYFROqVACvDG-wRW (www.pygame.org) 
+
+* (Python OO - Udacity)[https://www.udacity.com/wiki/classes]
+
+* Ignorância Zero (Python) Curso https://www.youtube.com/channel/UCmjj41YfcaCpZIkU-oqVIIw 
+
+* Curso Python 3 (Cursos Em Videos) https://www.youtube.com/playlist?list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6
+
+* Curso Python Flask (framework web) https://www.youtube.com/playlist?list=PL3BqW_m3m6a05ALSBW02qDXmfDKIip2KX
+
+* UnivespTV http://univesptv.com.br/ 
+
+* Cursos Gratuitos - Gustavo Guanabara- Canal https://www.youtube.com/user/cursosemvideo
+
+* Khan Academy - Estudos Online - https://pt.khanacademy.org/computing/computer-programming 
+
+* Data Structures & Algorithm Analysis by Clifford A. Shaffer http://people.cs.vt.edu/~shaffer/Book/ 
+
+* Programação em C http://www2.ic.uff.br/~hcgl/tutorial.html 
+
+* Computação e Analise de Algoritmos https://www.ime.usp.br/~pf/ 
+
+* Playground Python Tech.IO https://tech.io/playgrounds/500/advanced-python-features/content/advanced-python-features
+
+* Visualizar Execução de umcódigo, programa, passo à passo - http://www.pythontutor.com/ 
+
+* What's New In Python 3 https://docs.python.org/3.0/whatsnew/3.0.html 
+
+* What's New In Python https://docs.python.org/3.0/whatsnew/index.html 
+
+* Garbage Collection In Python - https://docs.python.org/3.0/whatsnew/2.0.html#garbage-collection-of-cycles 
+
+* https://wsricardo.github.io
+
+* Raspagem de Dados - Portais e Artigos https://github.com/wsricardo/mcestudos/blob/master/rasp-dados.md  
+
+* Berkeley CS162 - OS Operating Systems and Systems Programming  https://cs162.eecs.berkeley.edu/ 
+
+* More Materials about / Mais materiais sobre PYTHON - https://github.com/wsricardo/mcestudos/blob/master/TutorialsPythonsNews.md 
+
+* Programação Python Para Jornalistas Professor Fernando Masanori - https://github.com/wsricardo/mcestudos/tree/master/treinamento-webScraping
+
+* Python Tutoriais <a href="TutorialsPythonsNews.md">+++</a>
+    
+  
+
+
+### Programação  - Linguagens
+
+* Assembly
+-
+
+* Haskell
+	- https://tech.io/playgrounds/2048/try-haskell/lesson-1basics-numbers-strings-etc; 
+	- Curso Haskell Para Iniciantes https://www.youtube.com/watch?v=L_GvP5XTJj4&list=PL8eBmR3QtPL3pDzQpwPYfWQ4NEPGu6j7z;
+
+* C/C++
+	- University Washington : Luis Ceze Gaetano Borriello 'The hardware/Software Interface Class htps://www.youtube.com/playlist?list=PL0oekSefhQVJdk0hSRu6sZ2teWM740NtL
+
+* Lisp
+
+* Java
+
+* Python
+
+### Criando Games
+
+Alguns tutoriais... (em breve)
+
+
+------------------------------------------
+
+<section style="padding:2px, margin: 1px;">
 <br>
-(Em construção)<br>
-<h2> <b>  Indice </b> </h2>
+<b> 2. Matemática Avançada </b>
+  <p> Geometria Analitica, Algebra Linear, Calculos, Combinatória, Probabilidade.
+  
+</section>
+
+<section>
+  <b> 3. Introdução A Programação </b>
+<br><br>
+
+  <p> Programas de computador são construidos afim de facilitar e agilizar determinadas tarefaz maçantes e que demandam grande capacidades de armazanamento e processamento os mesmos são construidos sobre conceitos e definições de algoritmos e linguagens de programação em sua implementação.</p>
+
+<p>Um algoritmo é uma sequência de instruções não ambiguas bem definidas para resolução dum problema. De posse desta definição determinamos um algoritmo que servirá em tarefas executadas dentro do escopo de um programa conforme metodo de desenvolvimento usado na construção do software(programa).</p>
+
 <br>
-<ol>
-	<li><a href="https://wsricardo.github.io/mcestudos/intro/">Introdução</a></li> <br>
-	<li><a href="#">Seção2</a></li> <br>
-	<li><a href="#">Seção3</a></li><br>
-	<li><a href="#">Seção4</a></li><br>
-	<li><a href="#">Seção5</a></li><br>
-	<li><a href="#">Seção6</a></li><br>
-	<li><a href="#">Seção7</a></li><br>
-	<li><a href="#">Seção8</a></li><br>
+<a href="aulas/README.md">Aulas</a>
+</section>
+<br><br>
+<section>
+<b> 4. Computação e Sistemas </b>
+<br>
+<br>
+<p>
+O advento da computação veio com uso em finalidades militares, apesar de outros trabalhos virem sendo feitos como de Ada Lovelace e Charles Babbage no século 19. Além dos grandes feitos do matemático Alan Turing.</p>
+<br><br>
+Sistemas Operacionais - Univesp
+<br>
+<a href="https://youtu.be/Rl6HhDvW984?list=PLxI8Can9yAHeK7GUEGxMsqoPRmJKwI9Jw"><img  alt="Engenharia da Computação- Sistemas Operacionais"  src="https://img.youtube.com/vi/Rl6HhDvW984/hqdefault.jpg" width="480" height="360" border="10"></a>
+<br>
+Desenvolvimento de Sistema Wiki OSDev http://wiki.osdev.org/Main_Page
+	
+OS Development Tutorial	https://github.com/cfenollosa/os-tutorial
+<br>
 
-</ol>
+*  OS Dev (Iniciantes) Wiki - https://wiki.osdev.org/Meaty_Skeleton
 
+</section>
+<br><br><br>
+
+<section>
+<b> 5. Tecnologias & Educação </b>
+<p> Canal UnivespTV fornece um vasto conteudo em diversas áreas doconhecimento tanto em ciencias, tecnologias como em areas humanas (Historia, Arte, e outras) www.univestv.com.br
+<br>
 </section>
 
 <br>
-<a href="https://www.repl.it"> REPL.IT - Escrever códigos online</a>
-	<br>
+<section>
+<b> 6. Cultura GEEK </b>
+<p> Cultura 'geek' envolve não só elementos das areas de tecnologias como computação como também literatura de ficção, cinema, artes, e um modo proprio de vertir-se inspirados por personagens de filmes e no universo da tecnologia.
+<br>
+Links
+<a href="#">  </a>
+</section>
+
+<section>
+<b> 7. Hacker </b>
+<p> Infelizmente atualmente associado à atos ilicitos e usado como sinônimo de 'crackers' muitas vezes, os hackers são nada mais nada menos que pessoas que teem um grande dominio em área do conhecimento em grande parte informatica e tecnologia (comum assemelhar-se de certa forma ao que chamava-se de CDF ou Nerd e possui caracteristicas da cultura GEEk)
+<br>
+Links
+<a href="#">  </a>
+</section>
+
+### 8. Artes, Humanas & Ciências
+
+(Em breve conteúdos)
+
+<section id="extra-links">
+<b><h3>Extra Links</h3></b>
+<br>
+## Backup Links Extras
+<br><br>
+
+<b><i>Computação</i></b><br><br>
+<ul>
+<li>Curso de linguagem C http://suporteninja.com/curso-de-c-gratuito-com-certificado-criacao-de-programas-de-computador</li>
+<li>Curso Assembly http://www.assemblyprogressivo.net/ </li>
+<li> Mini Curso sobre Git https://github.com/ltiaunesp/Git-Minicurso </li>
+<li>Plataforma para repositório de projetos https://bitbucket.org/ </li>
+<li>https://daringfireball.net/projects/markdown/syntax</li>
+<li>Fedora GNU/Linux https://fedoraproject.org/</li> 
+<li>Editor Vi/Vim https://pt.wikibooks.org/wiki/Vim/Dividindo_a_janela e http://angelitomg.com/blog/dividindo-a-tela-no-vim/</li>
+<li>Nginx nginx [engine x] is an HTTP and reverse proxy server, a mail proxy server, and a generic TCP/UDP proxy server https://nginx.org/en/ </li>
+<li>Converter Markdown com formulas matemáticas em HTML http://pandoc.org/ </li>
+<li>Textos Cientificos com Latex (online) - https://www.overleaf.com/ e https://www.sharelatex.com/ </li>
+<li>Latex em HTML com Mathjax https://www.mathjax.org Github https://github.com/mathjax/MathJax </li>
+<li> Qt Creator IDE - Desenvolvimenti GUI Qt C/C++ https://www.qt.io/ide/ </li>
+ 
+</ul>
+<br><br>
+<b><i> Computação Grafica e Video - Processamento de Imagem</i></b>
+
+* OpenCV - Visão Computacional http://docs.opencv.org/3.0-beta/doc/py_tutorials/py_imgproc/py_table_of_contents_imgproc/py_table_of_contents_imgproc.html
+
+* Scipy, Numpy, Packs Scientific Computer http://scikit-image.org/
+
+* MoviePy Processamento de video http://zulko.github.io/moviepy/
+
+
+<br>
+<br><br>
+Markdown/Texts Editor
+<br>
+	<ul>
+		<li>https://stackedit.io</li>
+		<li>http://dillinger.io/</li>
+		<li>https://jbt.github.io/markdown-editor/</li>
+		<li>https://remarkableapp.github.io/</li>
+		<li>https://github.com/retext-project/retext</li>
+		<li>https://atom.io/</li>
+	</ul>
+
+ <br><br>
+
+<b><i>Matemática</i></b>
+<br><br>
+	<i>SBM</i><br>
+	<ol> 
+		<li> <a href="https://www.sbm.org.br/publicacoes/publicacoes-para-download/colecao-simposios-de-matematica">Coleção Simpósios de Matemática</a></li>
+		<li><a href="https://www.sbm.org.br/publicacoes/publicacoes-para-download/colecao-coloquios-da-matematica">Coleção Colóquios de Matemática</a></li>
+		<li>Ebook Free Matemática e Computação Free Ebooks (copy left) http://wanartsci.blogspot.com.br/2011/08/ebook-online-free-math-and-computing.html</li>
+		<li> Gatech Ebooks (mathematics) http://people.math.gatech.edu/~cain/textbooks/onlinebooks.html e http://people.math.gatech.edu/~cain/ </li>
+	</ol>
 	
-	<a href="http://www.gaenos.blogspot.com">GAENOS</a>
-</body>
-</html>
+* Project Euler -"Project Euler is a series of challenging mathematical/computer programming problems" http://projecteuler.net/;
+* 
+
+<br><br>
+<b><i>Ciências e Linguas</i></b><br><br>
+
+
+<br><br>
+<hr>
+<br><br>
+
+## TECHIO
+What you know can inspire others <br/>
+https://tech.io/
+<br>
+Advanced Python Features <br>
+https://tech.io/playgrounds/500/advanced-python-features/content/advanced-python-features
+<br>
+
+</section>
+<br>
+<hr>
+<br>
+<section id=wire_chat>
+<b>Redes & Chats com Python</b><br>
+Pesquisando sobre P2P, IRCs, Webchat. <br>
+Como construi-los com python puro(preferencialmente) ou com libs. <br>
+Que tiver mais sugestões e dicas de segurança só comentar. <br>
+
+1. https://github.com/siddharthasahu/P2P-chat-application/blob/master/chatApp.py
+2. https://github.com/vijayant123/Python-P2P-Chat/blob/master/chat.py
+3. https://github.com/chprice/Python-Chat-Program 
+4. https://pypi.python.org/pypi/irc
+5. https://linuxacademy.com/blog/geek/creating-an-irc-bot-with-python3/
+</section>  
+
+<br><br>
+<hr>
+<br><br>
+
+## LINKS Various
+<ul>
+	<li>Telegram - Serviço de mensagem/chats www.telegram.org e https://core.telegram.org/bots</li>
+	<li>Linguagem de Programação Lua lua.org - Referência https://www.lua.org/manual/5.2/pt/</li>
+	<li> Computer Graphics - GPU http://wanartsci.blogspot.com.br/2011/12/computer-graphics-gpu.html e https://youtu.be/HAm5ziXE6pA </li>
+	<li>OpenGL For Beginner http://wanartsci.blogspot.com.br/2015/09/opengl-for-begginners-and-wiki-help.html </li>
+	<li>Nvidia GPU GEMS http://developer.nvidia.com/content/gpu-gems-part-i-natural-effects </li>
+	<li> Trabalho & Freelance - https://trampos.co/,  https://www.freelancer.com, https://www.upwork.com/, https://hipsters.jobs/, https://remote.com/ e https://www.workana.com/ .</li>
+	<li> Programação C e GUI GTK https://bitismyth.wordpress.com/2017/04/22/programacao-grafica-em-c-gnome-tool-kit-gtk/ </li>
+	<li> Artigo: Analise de Dados Públicos - Crislânio https://crislanio.wordpress.com/2017/06/02/analise-dos-dados-abertos-do-governo-federal/ </li>
+	<li>Processamento de Imagem
+https://processing.org/tutorials/pixels/ </li>
+
+<li>Simulações Naturais
+https://pt.khanacademy.org/computing/computer-programming/programming-natural-simulations
+	</li>
+</ul>
+<hr>
+<br>
+<b>Matérias e Artigos</b>
+<br><br>
+<ul>
+<li> Sirius - Surgimento dum Laboratório mais moderno ainda
+http://g1.globo.com/sp/campinas-regiao/noticia/laboratorio-sincrotron-a-luz-mais-brilhante-da-ciencia-brasileira-comeca-a-se-apagar.ghtml </li>
+
+</ul>
+<br>
+<hr>
+<br>
+<br>
+Note muitos codigos e materiais são contribuições de terceiros cabendo
+à estes os respectivos direitos sobre criação. Sendo este repositório
+uma forma não só de manter e divulgar, como também criar
+um guia como auxilio aos estudantes.
+<br><br><br><br>
+Grato.<br>
+Abraços fraternos e cordiais.<br>
+<i>Wandeson Ricardo </i>
+<br>
+<br>
+<br>
+<a href="http://www.gaenos.blogspot.com">GAENOS http://www.gaenos.blogspot.com</a>
